# kenect

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
apps/backend/: Cargo.toml
apps/backend/src/: main.rs
apps/frontend/: Cargo.toml  Dioxus.toml
apps/frontend/assets/: style.css
apps/frontend/src/: app.rs  main.rs  utils.rs
apps/frontend/src/components/: game_screen.rs  learning_screen.rs  map_view.rs  mod.rs  result_screen.rs  setup_screen.rs
docs/: create-csv.md  tokyo-svg-generation.md
enemy-ai/: Cargo.toml
enemy-ai/src/: lib.rs
migrations/: 20260509194332_init.sql
