[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
dioxus-web = { version = "0.7" }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["json"] }
shared = { path = "../../packages/shared" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "EventTarget"] }
